tests/ui/type-alias-impl-trait/implied_lifetime_wf_check4_static.stderr
error[E0310]: the parameter type `A` may not live long enough
  --> $DIR/implied_lifetime_wf_check4_static.rs:17:5
   |
LL |     assert_static::<A>()
   |     ^^^^^^^^^^^^^^^^^^
   |     |
   |     the parameter type `A` must be valid for the static lifetime...
   |     ...so that the type `A` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn test<A: 'static>()
   |          +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
